--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "jquery": "3.4.1"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2",
         "browser-sync": "2.26.7",
         "del": "^4.1.1",
         "gulp": "4.0.2",
